[package]
name = "capchat"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
color-eyre = "0.5.11"
futures = "0.3.14"
geo = "0.18.0"
geojson = "0.22.2"
glob = "0.3.0"
reqwest = { version = "0.11.3", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.125", features = ["derive"] }
serde-xml-rs = "0.4.1"
serde_json = "1.0.64"
sled = "0.34.6"
structopt = "0.3.21"
tokio = { version = "1.5.0", features = ["full"] }
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
