[package]
name = "capchat"
version = "0.1.0"

authors = ["Félix Saparelli <felix@passcod.name>"]
license = "Apache-2.0"
description = "Posts CAP alerts to a chat room"
keywords = ["cap", "alerts", "chat"]
categories = ["command-line-utilities"]

documentation = "https://github.com/passcod/capchat"
homepage = "https://github.com/passcod/capchat"
repository = "https://github.com/passcod/capchat"
readme = "README.md"

edition = "2018"
exclude = ["/pkg", "/bin", "/.github"]

[[bin]]
name = "capchat"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
color-eyre = "0.5.11"
futures = "0.3.14"
geo = "0.18.0"
geojson = { version = "0.22.2", features = ["geo-types"] }
glob = "0.3.0"
itertools = "0.10.1"
mime = "0.3.16"
reqwest = { version = "0.11.3", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.125", features = ["derive"] }
serde-xml-rs = "0.4.1"
serde_json = "1.0.64"
sled = "0.34.6"
structopt = "0.3.21"
tokio = { version = "1.5.0", features = ["full"] }
tracing = "0.1.25"
tracing-subscriber = "0.2.17"

[build-dependencies]
embed-resource = "1.6.1"

[profile.release]
lto = true
codegen-units = 1
