[package]
name = "capchat"
version = "0.5.0"

authors = ["Félix Saparelli <felix@passcod.name>"]
license = "Apache-2.0"
description = "Posts CAP alerts to a chat room"
keywords = ["cap", "alerts", "chat"]
categories = ["command-line-utilities"]

documentation = "https://github.com/passcod/capchat"
homepage = "https://github.com/passcod/capchat"
repository = "https://github.com/passcod/capchat"
readme = "README.md"

edition = "2018"
resolver = "2"
exclude = ["/pkg", "/bin", "/.github"]

[[bin]]
name = "capchat"

[dependencies]
cheap-ruler = "0.3.0"
chrono = { version = "0.4.19", features = ["serde"] }
color-eyre = "0.5.11"
feed-rs = "1.0.0"
futures = "0.3.14"
geo = "0.18.0"
geo-booleanop = { git = "https://github.com/21re/rust-geo-booleanop" }
geojson = { version = "0.22.2", features = ["geo-types"] }
geozero = "0.7.4"
glob = "0.3.0"
itertools = "0.10.1"
mime = "0.3.16"
reqwest = { version = "0.11.3", features = ["gzip", "json", "multipart", "rustls-tls"], default-features = false }
resvg = "0.18.0"
serde = { version = "1.0.125", features = ["derive"] }
serde-xml-rs = "0.4.1"
serde_json = "1.0.64"
sled = "0.34.6"
structopt = { version = "0.3.23", features = ["color", "wrap_help"] }
svg = "0.10.0"
tiny-skia = "0.6.1"
tokio = { version = "1.5.0", features = ["full"] }
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
usvg = "0.18.0"

[target.aarch64-apple-darwin.dependencies]
reqwest = { version = "0.11.3", features = ["gzip", "json", "multipart"] }

[build-dependencies]
embed-resource = "1.6.1"

[profile.dev.package.geo]
debug-assertions = false
# https://github.com/georust/geo/blob/324868d2c67aa22ccadb51c4960586cbaab67084/geo/src/algorithm/relate/geomgraph/edge_end_bundle_star.rs#L112
